--- a/playbook.yml
+++ b/playbook.yml
@@ -5,3 +5,8 @@
       group: 
         name: ibm
         state: present
+
+    - name: add user harry
+      user: 
+        name: harry
+        state: present
